@@ -1,5 +1,10 @@
 This file describes the changes to the Log for C++ library. See the CVS repository for more detailed descriptions.
 
+2002-05-12 Bastiaan Bakker <bastiaan.bakker@lifeline.nl>
+	* src/RollingFileAppender.cpp: explicitly remove oldest file in 
+	rollOver() because win98 cannot rename() to existing files. 
+	(Paulo Pizarro)
+	
 2002-04-21 Bastiaan Bakker <bastiaan.bakker@lifeline.nl>
 	* include/log4cpp/config-win32.h: added mode_t typedef.
 
